frontend-user-login

--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -4,7 +4,7 @@
 
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">UserName</label>
-            <input type="text" [(ngModel)]="user.userName" class="form-control" id="userName" name="userName">
+            <input type="text" [(ngModel)]="user.userName" class="form-control" id="username" name="userName">
         </div>
 
         <div class="mb-3">
@@ -15,6 +15,6 @@
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
           </div> -->
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button  type="submit" class="btn btn-primary">Login</button>
     </form>
 </div>
