User-Login-Frontend

--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -13,7 +13,7 @@
                             <div class="mb-3">
                                 <label for="exampleFormControlInput1" class="form-label">UserName</label>
                                 <input type="text" [(ngModel)]="user.username" class="form-control" id="username"
-                                    name="userName">
+                                    name="username">
                             </div>
 
                             <div class="mb-3">
@@ -24,7 +24,7 @@
 
                             <button  class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
                             <hr class="my-4">
-                            <a href="http://localhost:8081/open">User details</a>
+                            <!-- <a href="http://localhost:8081/open">User details</a> -->
 
                         </form>
                     </div>
